--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,11 @@
 }
 * {
   box-sizing: border-box;
+  margin: 0; 
+  padding: 0;
 }
 body {
-  margin: 0; 
-  padding: 0; 
+  padding: 70px 0;
   font-family: 'Lexend Deca', sans-serif;
   display: grid; 
   place-items: center; 
@@ -23,6 +24,13 @@ body {
   width: 900px;
   border-radius: 6px; 
   overflow: hidden;
+}
+@media (max-width: 375px) {
+  .container {
+    flex-direction: column; 
+    width: calc(375px - 60px); 
+
+  }
 }
 .container .box {
   color: #fff; 
